--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -14,23 +14,23 @@
 		color: _palette(fg);
 		letter-spacing: 0.025em;
 
-		@include breakpoint(xxlarge) {
+		@include breakpoint('<=xxlarge') {
 			font-size: 17pt;
 		}
 
-		@include breakpoint(xlarge) {
+		@include breakpoint('<=xlarge') {
 			font-size: 15pt;
 		}
 
-		@include breakpoint(large) {
+		@include breakpoint('<=large') {
 			font-size: 13pt;
 		}
 
-		@include breakpoint(medium) {
+		@include breakpoint('<=medium') {
 			font-size: 13pt;
 		}
 
-		@include breakpoint(small) {
+		@include breakpoint('<=small') {
 			font-size: 12pt;
 			line-height: 1.5em;
 		}
@@ -53,7 +53,7 @@
 		letter-spacing: -0.05em;
 	}
 
-	@include breakpoint(small) {
+	@include breakpoint('<=small') {
 		h2 {
 			font-size: 1.5em;
 		}
