--- a/assets/sass/components/_gallery.scss
+++ b/assets/sass/components/_gallery.scss
@@ -61,7 +61,7 @@
 			}
 		}
 
-		@include breakpoint(xsmall) {
+		@include breakpoint('<=xsmall') {
 			@include vendor('flex-wrap', 'nowrap');
 			@include vendor('flex-direction', 'column');
 
