--- a/assets/sass/components/_box.scss
+++ b/assets/sass/components/_box.scss
@@ -19,7 +19,7 @@
 			padding: 3.5em 2.5em 3.5em 2.5em;
 		}
 
-		@include breakpoint(small) {
+		@include breakpoint('<=small') {
 			padding: 1em;
 
 			&.style2 {
