--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -7,13 +7,20 @@
 /* Footer */
 
 	#footer {
+		@include vendor('display', 'flex');
+		@include vendor('align-items', 'center');
+		@include vendor('justify-content', 'space-between');
 		position: relative;
-		height: 5em;
-		line-height: 5em;
 		margin: 0;
+		line-height: 1em;
+		padding: 1.5em;
 		background: _palette(accent3, bg);
 		color: _palette(accent3, fg);
 		overflow: hidden;
+
+		> * {
+			margin-bottom: 0;
+		}
 
 		a {
 			color: inherit;
@@ -24,30 +31,7 @@
 		}
 
 		ul {
-			&.actions {
-				position: absolute;
-				left: 1em;
-				top: 0.25em;
-				height: 5em;
-				line-height: 5em;
-				margin: 0;
-
-				li {
-					font-size: 1.25em;
-					margin: 0;
-
-					a {
-						padding: 0.5em;
-					}
-				}
-			}
-
 			&.menu {
-				position: absolute;
-				right: 2em;
-				top: 0;
-				height: 5em;
-				line-height: 5em;
 				margin: 0;
 
 				li {
@@ -57,47 +41,31 @@
 			}
 		}
 
-		@include breakpoint(medium) {
-			height: auto;
-			line-height: inherit;
+		@include breakpoint('<=medium') {
+			@include vendor('flex-direction', 'column');
+			@include vendor('justify-content', 'center');
+			line-height: 1.5em;
 			text-align: center;
 			padding: 2em 1em 2em 1em;
 
-			ul {
-				&.actions {
-					position: relative;
-					left: 0;
-					top: 0;
-					height: auto;
-					line-height: inherit;
-					margin: 0 0 1em 0;
-				}
-
-				&.menu {
-					position: relative;
-					right: 0;
-					top: 0;
-					height: auto;
-					line-height: inherit;
-				}
+			> * {
+				margin: 0 0 1em 0;
 			}
 		}
 
-		@include breakpoint(small) {
+		@include breakpoint('<=small') {
 			ul {
 				&.menu {
 					li {
-						border-left: 0;
-						padding: 1em 0 0 0;
-						margin: 0;
+						border-left: none;
 						display: block;
+						line-height: inherit;
+						margin: 0.25em 0 0 0;
+						padding: 0.25em 0 0 0;
 
 						&:first-child {
+							margin-top: 0;
 							padding-top: 0;
-						}
-
-						a {
-							line-height: 1.5em;
 						}
 					}
 				}
