--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2244,8 +2244,8 @@ input, select, textarea {
 
 /* One */
 
-	#one {
-		background: url("images/overlay.png"), url("../../images/one.jpg");
+	#que-eu-faco {
+		background: url("images/overlay.png"), url("../../images/snow.jpeg");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -2253,8 +2253,8 @@ input, select, textarea {
 
 /* Two */
 
-	#two {
-		background: url("images/overlay.png"), url("../../images/two.jpg");
+	#quem-eu-sou {
+		background: url("images/overlay.png"), url("../../images/castle.jpeg");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -2262,12 +2262,12 @@ input, select, textarea {
 
 /* Contact */
 
-	#contact {
+	#contato {
 		overflow: hidden;
 		padding-bottom: 0;
 	}
 
-		#contact .box {
+		#contato .box {
 			-moz-transition: -moz-transform 1s ease;
 			-webkit-transition: -webkit-transform 1s ease;
 			-ms-transition: -ms-transform 1s ease;
@@ -2279,7 +2279,7 @@ input, select, textarea {
 			position: relative;
 		}
 
-		#contact.inactive .box {
+		#contato.inactive .box {
 			-moz-transform: translateY(100%);
 			-webkit-transform: translateY(100%);
 			-ms-transform: translateY(100%);
@@ -2288,7 +2288,7 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
-			#contact .box {
+			#contato .box {
 				padding: 1.5em 1.5em 2em 1.5em;
 			}
 
@@ -2296,7 +2296,7 @@ input, select, textarea {
 
 		@media screen and (max-width: 480px) {
 
-			#contact .box {
+			#contato .box {
 				padding: 1em 1em 2em 1em;
 			}
 
